end main section + fixed 1px gap between br.points

--- a/css/12bool.css
+++ b/css/12bool.css
@@ -220,7 +220,7 @@
 }
 
 /* XS */
-@media all and (max-width: 767px) {
+@media all and (max-width: 767.999px) {
     .col-xs-1 {
       width: calc( ( 100% / 12 ) * 1);
     }
